--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "prefer-destructuring": ["error", { "object": true, "array": false }],
     "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val" }],
     "arrow-body-style": 0,
+    "valid-typeof": "off",
     "no-restricted-syntax": 0,
     "camelcase": 0
   },
