--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val" }],
     "arrow-body-style": 0,
     "valid-typeof": "off",
+    "no-plusplus": "off",
     "no-restricted-syntax": 0,
     "camelcase": 0
   },
